--- a/mystyle.sty
+++ b/mystyle.sty
@@ -45,11 +45,9 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%
 %%Glossar Paket laden%
-\usepackage[
-nonumberlist, %keine Seitenzahlen anzeigen
-acronym,      %ein Abkürzungsverzeichnis erstellen
-toc,          %Einträge im Inhaltsverzeichnis
-section]      %im Inhaltsverzeichnis auf section-Ebene erscheinen
-{glossaries}
+\usepackage[xindy,toc]{glossaries} % nomain, if you define glossaries in a file, and you use \include{INP-00-glossary}
+\usepackage[xindy]{imakeidx}
+\GlsSetXdyCodePage{duden-utf8}
 %%%%%%%%%%%%%%%%%%%%%%%
+
 \onehalfspacing%Anderthalb Zeilenabstand
