--- a/tex/erklaerungen.tex
+++ b/tex/erklaerungen.tex
@@ -1,20 +1,31 @@
 \section*{Erklärungen}
 \subsection*{Erklärung des Prüfungsteilnehmers}
-Ich versichere durch meine Unterschrift, dass ich das Projekt und die dazugehörige Dokumentation
-selbständig und ohne fremde Hilfe angefertigt und alle Stellen, die ich wörtlich oder annähernd
-wörtlich aus Veröffentlichungen entnommen habe, als solche kenntlich gemacht habe. Die Arbeit
-hat in dieser Form keiner anderen Prüfungsinstitution vorgelegen.\\[1.5cm]
+Ich versichere durch meine Unterschrift, dass ich das Projekt und die
+dazugehörige Dokumentation
+selbständig und ohne fremde Hilfe angefertigt und alle Stellen, die
+ich wörtlich oder annähernd
+wörtlich aus Veröffentlichungen entnommen habe, als solche kenntlich
+gemacht habe. Die Arbeit
+hat in dieser Form keiner anderen Prüfungsinstitution vorgelegen.
+\\[1.5cm]
 %\doublesignature{Ort, Datum}{Unterschrift des Prüfungsteilnehmers}
 \subsection*{Erklärung des Ausbildungsbetriebes}
-Wir versichern, dass das Projekt wie in der Dokumentation dargestellt, in unserem Unternehmen
+Wir versichern, dass das Projekt wie in der Dokumentation dargestellt,
+in unserem Unternehmen
 realisiert worden ist.\\[1.5cm]
 %\doublesignature{Ort, Datum}{Unterschrift des Ausbilders}
 \section*{Sperrvermerk}
-Die vorliegende Abschlussarbeit mit dem Titel ``Entwicklung einer mobilen Webanwendung zur Planung und Unterstützung von Open Spaces'' enthält vertrauliche Daten des Unternehmens OPITZ CONSULTING Deutschland GmbH.
+Die vorliegende Abschlussarbeit mit dem Titel ``Entwicklung einer
+mobilen Webanwendung zur Planung und Unterstützung von Open Spaces''
+enthält vertrauliche Daten des Unternehmens OPITZ CONSULTING
+Deutschland GmbH.
 \\[0.5cm]
-Die Abschlussarbeit darf nur dem Erst-  und Zweitgutachter sowie  befugten Mitgliedern des
-Prüfungsausschusses zugänglich gemacht werden. Eine Veröffentlichung und Vervielfältigung
+Die Abschlussarbeit darf nur dem Erst-  und Zweitgutachter sowie
+befugten Mitgliedern des
+Prüfungsausschusses zugänglich gemacht werden. Eine Veröffentlichung
+und Vervielfältigung
 der Abschlussarbeit ist \- auch in Auszügen \- nicht gestattet.
 \\[0.5cm]
-Eine Einsichtnahme der Arbeit durch Unbefugte bedarf einer ausdrücklichen Genehmigung des
-Verfassers und des Unternehmens OPITZ CONSULTING Deutschland GmbH.
+Eine Einsichtnahme der Arbeit durch Unbefugte bedarf einer
+ausdrücklichen Genehmigung des Verfassers und des Unternehmens OPITZ
+CONSULTING Deutschland GmbH.
