--- a/tex/ausgangssituation.tex
+++ b/tex/ausgangssituation.tex
@@ -1,12 +1,35 @@
 \section{Ausgangssituation}
 \subsection{Unternehmensbeschreibung}
-Das IT-Beratungshaus OPITZ CONSULTING Deutschland GmbH ist ein wachsendes, mittelständisches Unternehmen im Bereich der IT-Beratung und -Dienstleistung. Am Hauptsitz in Gummersbach befinden sich die Holding-Gesellschaft sowie der Größte der insgesamt neun Standorte. Das Unternehmen ist seit seiner Gründung im Jahr 1990 auf derzeit etwa 450 Mitarbeiter gewachsen. Die 9 Standorte setzen sich aus sieben Standorten in Deutschland, sowie zwei Standorten in Polen zusammen.
+Das IT-Beratungshaus OPITZ CONSULTING Deutschland GmbH ist ein
+wachsendes, mittelständisches Unternehmen im Bereich der IT-Beratung
+und -Dienstleistung. Am Hauptsitz in Gummersbach befinden sich die
+Holding-Gesellschaft sowie der Größte der insgesamt neun Standorte.
+Das Unternehmen ist seit seiner Gründung im Jahr 1990 auf derzeit etwa
+450 Mitarbeiter gewachsen. Die 9 Standorte setzen sich aus sieben
+Standorten in Deutschland, sowie zwei Standorten in Polen zusammen.
 \subsection{Projekthintergrund}
 Seit einigen Jahren werden bei Opitz regelmäßig Open Spaces durchgeführt.
-Ein Open Space ist eine Veranstaltung, bei der mehrere Personen zusammen kommen, Themen vorschlagen und diese in einer wie auch immer gearteten Weise bearbeiten, besprechen oder erlernen. Ein Open Space verteilt sich hierbei auf mehrere Räume und Timeslots, die zuvor festgelegt werden müssen. Die Themen werden von den Teilnehmern selbst angeboten und die Teilnehmer entscheiden mit ihrer Interessenbekundung an einem oder mehreren Themen, wie sich das Programm gestaltet.
+Ein Open Space ist eine Veranstaltung, bei der mehrere Personen
+zusammen kommen, Themen vorschlagen und diese in einer wie auch immer
+gearteten Weise bearbeiten, besprechen oder erlernen. Ein Open Space
+verteilt sich hierbei auf mehrere Räume und Timeslots, die zuvor
+festgelegt werden müssen. Die Themen werden von den Teilnehmern selbst
+angeboten und die Teilnehmer entscheiden mit ihrer Interessenbekundung
+an einem oder mehreren Themen, wie sich das Programm gestaltet.
 (siehe auch:\footnote{\url{http://en.wikipedia.org/wiki/Open_Space_Technology}})
-Falls die Teilnehmer nach Ablauf der Zeit eines Themas weiteres Interesse anmelden kann das Thema ad hoc verlängert und verlegt werden.
+Falls die Teilnehmer nach Ablauf der Zeit eines Themas weiteres
+Interesse anmelden kann das Thema ad hoc verlängert und verlegt werden.
 
-\noindent Derzeit verläuft die Planung dieser Open Spaces direkt auf der Veranstaltung mithilfe von Whiteboards oder Flipcharts. Im Nachhinein wird dann zumeist in einem CMS über die Veranstaltungen berichtet und Bilder hochgeladen, wobei dies auf freiwilliger Basis geschieht und zusätzlichen Aufwand bedeutet.
+\noindent Derzeit verläuft die Planung dieser Open Spaces direkt auf
+der Veranstaltung mithilfe von Whiteboards oder Flipcharts. Im
+Nachhinein wird dann zumeist in einem CMS über die Veranstaltungen
+berichtet und Bilder hochgeladen, wobei dies auf freiwilliger Basis
+geschieht und zusätzlichen Aufwand bedeutet.
 
-\noindent Dieses sehr statische Planungsvorgehen wird dem dynamischen Charakter von Open Spaces nicht gerecht. Als verteilte Veranstaltung mit ``Realtime''-Aspekt ist für eine sinnvolle Kommunikation ein hohes Maß an Vernetzung unverzichtbar. Das dokumentieren der parallelen und verteilten Vorgänge ist aus der Sicht einer Person aufwendig und das Ergebnis lückenhaft. Eine mobile Webanwendung kann und soll hier Abhilfe schaffen.
+\noindent Dieses sehr statische Planungsvorgehen wird dem dynamischen
+Charakter von Open Spaces nicht gerecht. Als verteilte Veranstaltung
+mit ``Realtime''-Aspekt ist für eine sinnvolle Kommunikation ein hohes
+Maß an Vernetzung unverzichtbar. Das dokumentieren der parallelen und
+verteilten Vorgänge ist aus der Sicht einer Person aufwendig und das
+Ergebnis lückenhaft. Eine mobile Webanwendung kann und soll hier
+Abhilfe schaffen.
