--- a/tex/projektplanung.tex
+++ b/tex/projektplanung.tex
@@ -63,3 +63,8 @@ ausgeführt werden.
 \subsection{Terminplanung}
 Das Projekt ist zwischen dem 25.01.2015 und dem 17.04.2015 zu
 realisieren und umfasst maximal 70 Arbeitsstunden.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../Doku"
+%%% End:
