--- a/Doku.tex
+++ b/Doku.tex
@@ -28,8 +28,10 @@
 
 %\section{Glossar}
 \printglossary[title=Glossar]%Glossar ausgeben
-\section{Anhang}
-\subsection{A}
-\subsection{B}
-\subsection{C}
+\input{tex/anhang}
 \end{document}
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: t
+%%% End:
