--- a/tex/realisierung.tex
+++ b/tex/realisierung.tex
@@ -51,15 +51,15 @@ Themas auf das Grid beschreibt.
     Right t <- dragStart
     action <- dragOver
     lookup "dragEndTopic" `merge` lookup "dragEndGridTopic"
-    return (action t)
+    return $ action t
 \end{lstlisting}
 
-Hier werden die Eventstreams für den Beginn eines Drag Vorgangs sowie
+\noindent Hier werden die Eventstreams für den Beginn eines Drag Vorgangs sowie
 das Ziehen über einen Zeitslot mit dem beenden des Drag Vorgangs
 kombiniert und in einem resultierenden Stream \texttt{dragTopic}
 ausgegeben. Dieser Stream abstrahiert nun die Mechanik des Drag and
 Drop Vorganges und erlaubt es die tatsächlichen Intentionen des
-Nutzers zu modellieren und angemessen zu reagieren.
+Nutzers zu modellieren und angemessen auf diese zu reagieren.
 \subsection{Test \& Abnahme}
 Der Client wurde auf verschiedenen Endgeräten getestet. Hierbei fielen
 immer wieder Kleinigkeiten auf die sich unterschieden. Das fixen
