add Fazit and moar

--- a/Doku.tex
+++ b/Doku.tex
@@ -25,10 +25,10 @@
 \input{tex/kosten-nutzen-betrachtung}
 \input{tex/ausblick}
 \input{tex/fazit}
-
-%\section{Glossar}
+\clearpage
 \printglossary[title=Glossar]%Glossar ausgeben
-\input{tex/anhang}
+\clearpage
+%\input{tex/anhang}
 \end{document}
 
 %%% Local Variables:
