--- a/tex/antrag.tex
+++ b/tex/antrag.tex
@@ -23,7 +23,7 @@ Interesse anmelden kann das Thema ad hoc verlängert und verlegt werden.
 
 \noindent Derzeit verläuft die Planung dieser Open Spaces direkt auf
 der Veranstaltung mithilfe von Whiteboards oder Flipcharts. Im
-Nachhinein wird dann zumeist in einem CMS über die Veranstaltungen
+Nachhinein wird dann zumeist in einem \gls{CMS} über die Veranstaltungen
 berichtet und Bilder hochgeladen, wobei dies auf freiwilliger Basis
 geschieht und zusätzlichen Aufwand bedeutet.
 
