--- a/tex/fazit.tex
+++ b/tex/fazit.tex
@@ -1,1 +1,27 @@
 \section{Fazit}
+Abschließend bleibt vor allem zu sagen, dass ich sehr zufrieden mit
+dem Ergebnis des Projektes bin. Ich war in der Lage die Vorteile der
+verwendeten funktionalen Sprachen einzubringen und klar verständlichen,
+modularen Quellcode zu schreiben. Die Idee des Unidirektionalen
+Datenflusses war für mich neu und hat mich im Sturm erobert. Mein
+Interesse in diesem Feld wurde auf jeden Fall geweckt und ich bin
+gespannt was mich dort noch alles erwartet.
+
+\subsection{Erhaltenes Feedback}
+Die entwickelte Applikation stellte sich als nützlich und
+gut verständlich dar. Mein erhaltenes Feedback sowohl von Nutzern als
+auch von Kollegen beim Code Review war durchgängig positiv.
+
+\subsection{Community}
+Bei manchen Kollegen konnte ich auch Interesse für
+PureScript wecken und bin gespannt was für Projekte und
+Kollaborationen dadurch entstehen könnten. Da das PureScript-Projekt
+noch jung ist und die Maintainer hilfreich und freundlich sind, konnte
+ich mich auch ein wenig in die Open-Source Community einbringen und
+PureScript Bibliotheken verbessern. Meine Erfahrungen waren also
+durchweg positiv und ermutigend.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../Doku"
+%%% End:
