--- a/tex/glossar.tex
+++ b/tex/glossar.tex
@@ -49,3 +49,24 @@
     \url{http://bower.io/}
   }
 }
+\newglossaryentry{CMS}
+{
+  name=CMS,
+  description={steht für Content-Management-System und beschreibt eine Software zur gemeinschaftlichen
+    Erstellung, Bearbeitung und Organisation von Inhalten. In diesem Fall handelt es sich um die Software
+    Confluence von Atlassian
+  }
+}
+\newglossaryentry{Event Sourcing}
+{
+  name=Event Sourcing,
+  description={beschreibt ein Vorgehen bei dem alle Zustandveränderungen
+    innerhalb eines Systems auf Events abgebildet werden. Dies erlaubt es Vorgänge
+    erneut abzuspielen oder die Vergangenheit zu verändern
+  }
+}
+
+%%% Local Variables:
+%%% mode: plain-tex
+%%% TeX-master: "../Doku"
+%%% End:
