--- a/tex/projektplanung.tex
+++ b/tex/projektplanung.tex
@@ -27,7 +27,7 @@ Spaces zu entwickeln. Weitere Ziele sind eine mobile Lösung um den
 Zeitplan zu betrachten, sowie die Tauglichkeit von funktionalen
 Techniken für die Webentwicklung zu evaluieren.
 \subsection{Infrastrukturelle Rahmenbedingungen}
-Für die Applikation wird ein Server im Firmeninternen Netz zur
+Für die Applikation wird ein Server im firmeninternen Netz zur
 Verfügung gestellt. Die Administration dieses Servers geschieht über
 \texttt{ssh} aus dem firmeninternen Netz. Der Server wird zeitlich
 begrenzt für die Dauer des Open Spaces bereitgestellt.
