--- a/tex/realisierung.tex
+++ b/tex/realisierung.tex
@@ -10,7 +10,7 @@ Bei der Analyse der Anforderungen fallen die Realtime Aspekte auf. Sie
 sollen mithilfe von Websocketkommunikation und Push-Based-Updates vom
 Server umgesetzt werden. Für einen modernen Look und ein intuitives
 Verhalten auf mobilen Geräten soll die Steuerung Drag and Drop unterstützen.
-\subsubsection*{Architektur}
+\subsubsection{Architektur}
 Einen groben Überblick über die spätere ``physikalische Ausprägung''
 des Systems soll die Grafik~\ref{fig:architektur} geben.
 \begin{figure}[h]
