--- a/Doku.tex
+++ b/Doku.tex
@@ -1,3 +1,4 @@
+
 \documentclass[12pt,a4paper]{scrartcl}
 
 \usepackage{mystyle}
@@ -16,7 +17,7 @@
 \include{tex/erklaerungen}
 \tableofcontents
 \listoffigures
-\listoftables
+%\listoftables
 \clearpage
 \pagenumbering{arabic}
 \input{tex/ausgangssituation}
