--- a/tex/projektplanung.tex
+++ b/tex/projektplanung.tex
@@ -62,7 +62,9 @@ Desktop Clients, als auch in den Browsern der mobilen Clients
 ausgeführt werden.
 \subsection{Terminplanung}
 Das Projekt ist zwischen dem 25.01.2015 und dem 17.04.2015 zu
-realisieren und umfasst maximal 70 Arbeitsstunden.
+realisieren und umfasst maximal 70 Arbeitsstunden. Am 17.03.2015
+findet wieder ein Open Space bei Opitz statt. Hier soll das Tool
+seinen ersten Einsatz haben und getestet werden.
 
 %%% Local Variables:
 %%% mode: latex
