--- a/tex/ausblick.tex
+++ b/tex/ausblick.tex
@@ -15,19 +15,19 @@ modeliert die Kommunikation zwischen den Systembestandteilen als Event
 Streams. Für diese Art von Eventbasierter Kommunikation wurde eine spezielle
 Datenbank\footnote{\url{https://geteventstore.com/}} entwickelt die
 das Observieren dieser Eventstreams unterstützt. Dies könnte
-Performance Steigerungen und neue Möglichkeiten für Verbesserung der Fehlertoleranz
-der Applikation bringen.
+Performance Steigerungen und neue Möglichkeiten für die Verbesserung
+der Fehlertoleranz der Applikation bringen.
 
 \subsection{Nutzung als Referenzprojekt}
-Das entstandene Projekt kann als Spielwiese/Lernmaterial dienen um
+Das entstandene Projekt kann als Spielwiese/Lernmaterial dienen, um
 funktionale Konzepte in einer realistischen Umgebung auszuprobieren.
 PureScript ist wahrscheinlich zu radikal um eine breite Nutzerbasis
-anzusprechen. Typsicherheit und funktionale Konzepte im Browser setzen
-sich jedoch immer mehr durch. So wird beispielsweise Microsoft's
-TypeScript die Sprache sein in der das aktuell wichtigste MVC
+anzusprechen, jedoch setzen sich Typsicherheit und funktionale
+Konzepte im Browser immer mehr durch. So wird beispielsweise Microsoft's
+TypeScript die Sprache sein, in der das aktuell wichtigste MVC
 Framework AngularJS entwickelt wird\footnote{\url{http://t3n.de/news/angularjs-20-typescript-597814/}}.
 Facebooks ``typed Javascript'' ist \textbf{Flow} ein JavaScript
-Compiler der JavaScript um ein Typsystem erweitert. Um diesen
+Compiler, der JavaScript um ein Typsystem erweitert. Um diesen
 Entwicklungen frühzeitig, progressiv entgegen zu treten ist die
 Beschäftigung mit PureScript eine wertvolle Erfahrung für jeden
 Frontend-Entwickler.
