--- a/tex/projektplanung.tex
+++ b/tex/projektplanung.tex
@@ -51,10 +51,10 @@ Server sowie die Datenbank lokal.
 \item \gls{pulp} in Version \texttt{2.0.2}
 \item \gls{bower} in Vesion \texttt{1.3.5}
 \end{itemize}
-Es wurde außerdem ein Buildserver in einer VM aufgesetzt, der die
-spätere Laufzeitumgebung für den Server nachbildet. Auf diesem
-Buildserver gebaute Programme können einfach auf das Produktivsystem
-kopiert und dort benutzt werden.
+Es wurde außerdem ein Buildserver in einer Virtuellen Maschine
+aufgesetzt, der die spätere Laufzeitumgebung für den Server
+nachbildet. Auf diesem Buildserver gebaute Programme können einfach
+auf das Produktivsystem kopiert und dort benutzt werden.
 \subsubsection{Laufzeitumgebung}
 Das entwickelte Backend soll abschließend auf einem Debian Server
 laufen. Die Webapplikation (das Frontend) soll sowohl im Browser auf
