--- a/tex/realisierung.tex
+++ b/tex/realisierung.tex
@@ -4,7 +4,12 @@ Zu Beginn wurde ein Plan für das grobe Zusammenspiel der beteiligten
 Komponenten angefertigt. Hiermit wurde die Arbeit in mehrere Schritte
 und leicht abzugrenzende Komponenten unterteilt. Das Projekt ließ sich
 damit in Meilensteine aufteilen, um strukturiert an das Projekt
-herangehen zu können.
+herangehen zu können. Als Vorgehensweise wurde das erweiterte
+Wasserfall-Modell gewählt. Aufgrund der knappen Zeitanforderungen
+bietet ein Wasserfall Ansatz einen direkten, klaren Pfad vom Beginn zum
+Ende des Projektes. Im erweiterten Wasserfall-Modell erhält man, durch die
+Möglichkeit Rückschritte zu machen, die nötige Flexibilität um auf
+Feedback einzugehen und Dinge ausprobieren zu können.
 \subsection{Analyse \& Konzeption}
 Bei der Analyse der Anforderungen fallen die Realtime Aspekte auf. Sie
 sollen mithilfe von Websocketkommunikation und Push-Based-Updates vom
